// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with GIF image 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="animated.gif"
          class="rounded-md max-h-96 max-w-full object-contain"
          data-fill="false"
          data-testid="image"
          src="https://example.com/animated.gif"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with dialog open showing mixed media carousel 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="mixed-image.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/mixed-feed.jpg"
        />
      </button>
    </div>
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/mixed-video.mp4"
    />
  </div>
  <div
    data-hidden-title="Post Attachments Media Carousel"
    data-override-defaults="true"
    data-show-close-button="false"
    data-testid="dialog-content"
  >
    <button
      class="absolute top-4 right-4 z-60 flex size-8 cursor-pointer items-center justify-center rounded-full bg-[rgba(5,5,10,0.30)] text-secondary-foreground/70 transition-colors hover:bg-[rgba(5,5,10,0.40)] hover:text-secondary-foreground"
      data-testid="dialog-close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="w-full max-w-80 xsm:max-w-dvw sm:max-w-[75dvw] 2xl:max-w-[50dvw]"
      data-duration="15"
      data-loop="true"
      data-start-index="0"
      data-testid="carousel"
      data-watch-drag="true"
    >
      <div
        class="-ml-3 items-center"
        data-testid="carousel-content"
      >
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <div
            data-testid="carousel-image"
            id="media-item-0"
          >
            <img
              alt="mixed-image.jpg"
              src="https://example.com/mixed-main.jpg"
            />
          </div>
        </div>
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <video
            class="max-h-[75dvh] w-full"
            data-pause-video="true"
            data-testid="video"
            id="media-item-1"
            src="https://example.com/mixed-video.mp4"
          />
        </div>
      </div>
      <button
        class="hidden hover:bg-secondary sm:inline-flex"
        data-testid="carousel-previous"
      >
        Previous
      </button>
      <button
        class="hidden hover:bg-secondary sm:inline-flex"
        data-testid="carousel-next"
      >
        Next
      </button>
    </div>
    <div
      class="mt-8 flex-row items-center justify-center gap-x-5.5"
      data-testid="container"
    >
      <button
        class="text-xs hover:bg-secondary"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        Fullscreen 
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H5a2 2 0 0 0-2 2v3"
          />
          <path
            d="M21 8V5a2 2 0 0 0-2-2h-3"
          />
          <path
            d="M3 16v3a2 2 0 0 0 2 2h3"
          />
          <path
            d="M16 21h3a2 2 0 0 0 2-2v-3"
          />
        </svg>
      </button>
      <span
        class="text-muted-foreground"
        data-size="xs"
        data-testid="typography"
      >
        1
        /
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with dialog open showing multiple images carousel 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="carousel1.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/carousel1-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="carousel2.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/carousel2-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="carousel3.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/carousel3-feed.jpg"
        />
      </button>
    </div>
  </div>
  <div
    data-hidden-title="Post Attachments Media Carousel"
    data-override-defaults="true"
    data-show-close-button="false"
    data-testid="dialog-content"
  >
    <button
      class="absolute top-4 right-4 z-60 flex size-8 cursor-pointer items-center justify-center rounded-full bg-[rgba(5,5,10,0.30)] text-secondary-foreground/70 transition-colors hover:bg-[rgba(5,5,10,0.40)] hover:text-secondary-foreground"
      data-testid="dialog-close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="w-full max-w-80 xsm:max-w-dvw sm:max-w-[75dvw] 2xl:max-w-[50dvw]"
      data-duration="15"
      data-loop="true"
      data-start-index="0"
      data-testid="carousel"
      data-watch-drag="true"
    >
      <div
        class="-ml-3 items-center"
        data-testid="carousel-content"
      >
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <div
            data-testid="carousel-image"
            id="media-item-0"
          >
            <img
              alt="carousel1.jpg"
              src="https://example.com/carousel1.jpg"
            />
          </div>
        </div>
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <div
            data-testid="carousel-image"
            id="media-item-1"
          >
            <img
              alt="carousel2.jpg"
              src="https://example.com/carousel2.jpg"
            />
          </div>
        </div>
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <div
            data-testid="carousel-image"
            id="media-item-2"
          >
            <img
              alt="carousel3.jpg"
              src="https://example.com/carousel3.jpg"
            />
          </div>
        </div>
      </div>
      <button
        class="hidden hover:bg-secondary sm:inline-flex"
        data-testid="carousel-previous"
      >
        Previous
      </button>
      <button
        class="hidden hover:bg-secondary sm:inline-flex"
        data-testid="carousel-next"
      >
        Next
      </button>
    </div>
    <div
      class="mt-8 flex-row items-center justify-center gap-x-5.5"
      data-testid="container"
    >
      <button
        class="text-xs hover:bg-secondary"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        Fullscreen 
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H5a2 2 0 0 0-2 2v3"
          />
          <path
            d="M21 8V5a2 2 0 0 0-2-2h-3"
          />
          <path
            d="M3 16v3a2 2 0 0 0 2 2h3"
          />
          <path
            d="M16 21h3a2 2 0 0 0 2-2v-3"
          />
        </svg>
      </button>
      <span
        class="text-muted-foreground"
        data-size="xs"
        data-testid="typography"
      >
        1
        /
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with dialog open showing single image carousel 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="dialog-image.jpg"
          class="rounded-md max-h-96 max-w-full object-contain"
          data-fill="false"
          data-testid="image"
          src="https://example.com/dialog-feed.jpg"
        />
      </button>
    </div>
  </div>
  <div
    data-hidden-title="Post Attachments Media Carousel"
    data-override-defaults="true"
    data-show-close-button="false"
    data-testid="dialog-content"
  >
    <button
      class="absolute top-4 right-4 z-60 flex size-8 cursor-pointer items-center justify-center rounded-full bg-[rgba(5,5,10,0.30)] text-secondary-foreground/70 transition-colors hover:bg-[rgba(5,5,10,0.40)] hover:text-secondary-foreground"
      data-testid="dialog-close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="w-full max-w-80 xsm:max-w-dvw sm:max-w-[75dvw] 2xl:max-w-[50dvw]"
      data-duration="15"
      data-loop="true"
      data-start-index="0"
      data-testid="carousel"
      data-watch-drag="true"
    >
      <div
        class="-ml-3 items-center"
        data-testid="carousel-content"
      >
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <div
            data-testid="carousel-image"
            id="media-item-0"
          >
            <img
              alt="dialog-image.jpg"
              src="https://example.com/dialog-main.jpg"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-8 flex-row items-center justify-center gap-x-5.5"
      data-testid="container"
    >
      <button
        class="text-xs hover:bg-secondary"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        Fullscreen 
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H5a2 2 0 0 0-2 2v3"
          />
          <path
            d="M21 8V5a2 2 0 0 0-2-2h-3"
          />
          <path
            d="M3 16v3a2 2 0 0 0 2 2h3"
          />
          <path
            d="M16 21h3a2 2 0 0 0 2-2v-3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with dialog open showing single video carousel 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/single-carousel-video.mp4"
    />
  </div>
  <div
    data-hidden-title="Post Attachments Media Carousel"
    data-override-defaults="true"
    data-show-close-button="false"
    data-testid="dialog-content"
  >
    <button
      class="absolute top-4 right-4 z-60 flex size-8 cursor-pointer items-center justify-center rounded-full bg-[rgba(5,5,10,0.30)] text-secondary-foreground/70 transition-colors hover:bg-[rgba(5,5,10,0.40)] hover:text-secondary-foreground"
      data-testid="dialog-close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="w-full max-w-80 xsm:max-w-dvw sm:max-w-[75dvw] 2xl:max-w-[50dvw]"
      data-duration="15"
      data-loop="true"
      data-start-index="0"
      data-testid="carousel"
      data-watch-drag="true"
    >
      <div
        class="-ml-3 items-center"
        data-testid="carousel-content"
      >
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <video
            class="max-h-[75dvh] w-full"
            data-pause-video="false"
            data-testid="video"
            id="media-item-0"
            src="https://example.com/single-carousel-video.mp4"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-8 flex-row items-center justify-center gap-x-5.5"
      data-testid="container"
    >
      <button
        class="text-xs hover:bg-secondary"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        Fullscreen 
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H5a2 2 0 0 0-2 2v3"
          />
          <path
            d="M21 8V5a2 2 0 0 0-2-2h-3"
          />
          <path
            d="M3 16v3a2 2 0 0 0 2 2h3"
          />
          <path
            d="M16 21h3a2 2 0 0 0 2-2v-3"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with dialog open showing videos carousel 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/carousel-video1.mp4"
    />
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/carousel-video2.mp4"
    />
  </div>
  <div
    data-hidden-title="Post Attachments Media Carousel"
    data-override-defaults="true"
    data-show-close-button="false"
    data-testid="dialog-content"
  >
    <button
      class="absolute top-4 right-4 z-60 flex size-8 cursor-pointer items-center justify-center rounded-full bg-[rgba(5,5,10,0.30)] text-secondary-foreground/70 transition-colors hover:bg-[rgba(5,5,10,0.40)] hover:text-secondary-foreground"
      data-testid="dialog-close"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="w-full max-w-80 xsm:max-w-dvw sm:max-w-[75dvw] 2xl:max-w-[50dvw]"
      data-duration="15"
      data-loop="true"
      data-start-index="0"
      data-testid="carousel"
      data-watch-drag="true"
    >
      <div
        class="-ml-3 items-center"
        data-testid="carousel-content"
      >
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <video
            class="max-h-[75dvh] w-full"
            data-pause-video="false"
            data-testid="video"
            id="media-item-0"
            src="https://example.com/carousel-video1.mp4"
          />
        </div>
        <div
          class="basis-full pl-3"
          data-testid="carousel-item"
        >
          <video
            class="max-h-[75dvh] w-full"
            data-pause-video="true"
            data-testid="video"
            id="media-item-1"
            src="https://example.com/carousel-video2.mp4"
          />
        </div>
      </div>
      <button
        class="hidden hover:bg-secondary sm:inline-flex"
        data-testid="carousel-previous"
      >
        Previous
      </button>
      <button
        class="hidden hover:bg-secondary sm:inline-flex"
        data-testid="carousel-next"
      >
        Next
      </button>
    </div>
    <div
      class="mt-8 flex-row items-center justify-center gap-x-5.5"
      data-testid="container"
    >
      <button
        class="text-xs hover:bg-secondary"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        Fullscreen 
        <svg
          aria-hidden="true"
          class="lucide lucide-maximize size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H5a2 2 0 0 0-2 2v3"
          />
          <path
            d="M21 8V5a2 2 0 0 0-2-2h-3"
          />
          <path
            d="M3 16v3a2 2 0 0 0 2 2h3"
          />
          <path
            d="M16 21h3a2 2 0 0 0 2-2v-3"
          />
        </svg>
      </button>
      <span
        class="text-muted-foreground"
        data-size="xs"
        data-testid="typography"
      >
        1
        /
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with empty array 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  />
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with four images (2x2 grid) 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="grid1.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/grid1-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="grid2.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/grid2-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="grid3.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/grid3-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="grid4.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/grid4-feed.jpg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with mixed images and videos 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="mixed-image.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/mixed-feed.jpg"
        />
      </button>
    </div>
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/mixed-video.mp4"
    />
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="mixed-gif.gif"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/mixed-gif.gif"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with multiple images 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="image1.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/image1-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="image2.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/image2-feed.jpg"
        />
      </button>
    </div>
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="image3.jpg"
          class="rounded-md object-cover object-center"
          data-fill="true"
          data-testid="image"
          src="https://example.com/image3-feed.jpg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with multiple videos 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/video1.mp4"
    />
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/video2.mp4"
    />
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/video3.mp4"
    />
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with single image 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <div
      class="h-52 w-full max-w-full relative only:h-auto sm:last:odd:col-span-2 cursor-pointer only:static"
      data-aschild="true"
      data-testid="dialog-trigger"
    >
      <button
        data-override-defaults="true"
        data-testid="button"
      >
        <img
          alt="snapshot-image.jpg"
          class="rounded-md max-h-96 max-w-full object-contain"
          data-fill="false"
          data-testid="image"
          src="https://example.com/snapshot-feed.jpg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`PostAttachmentsImagesAndVideos - Snapshots > matches snapshot with single video 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-display="grid"
    data-testid="container"
  >
    <video
      class="h-52 w-full max-w-full cursor-auto only:h-auto only:max-h-96 sm:last:odd:col-span-2"
      data-pause-video="false"
      data-testid="video"
      src="https://example.com/snapshot-video.mp4"
    />
  </div>
</div>
`;
